<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.curso.puzzletoroidal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.curso.puzzletoroidal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_instrucciones"
        android:name="com.curso.puzzletoroidal.ui.Instrucciones.Instrucciones"
        android:label="@string/menu_instrucciones"
        tools:layout="@layout/instrucciones_fragment" />
    <fragment
        android:id="@+id/nav_creditos"
        android:name="com.curso.puzzletoroidal.ui.creditos.Creditos"
        android:label="@string/menu_creditos"
        tools:layout="@layout/creditos_fragment" />
</navigation>