<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.Instrucciones.Instrucciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/subtit_reglas"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/titObjetivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Objetivo"
                android:textColor="#FFFFFF"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/subtit_reglas"
                app:layout_constraintEnd_toEndOf="@id/subtit_reglas"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/subtit_reglas"
                app:layout_constraintTop_toTopOf="@id/subtit_reglas"
                app:layout_constraintVertical_bias="0.473" />

            <TextView
                android:id="@+id/texto_ayuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:text="@string/instrucciones"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtit_reglas"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/gifmovimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_ayuda"
                app:layout_constraintVertical_bias="0.022">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/giphy" />

            </LinearLayout>

            <ImageView
                android:id="@+id/subtit_modos_de_juego"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gifmovimiento"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/titComoJugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cómo jugar"
                android:textColor="#FFFFFF"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/subtit_modos_de_juego"
                app:layout_constraintEnd_toEndOf="@id/subtit_modos_de_juego"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@id/subtit_modos_de_juego"
                app:layout_constraintTop_toTopOf="@id/subtit_modos_de_juego"
                app:layout_constraintVertical_bias="0.684" />

            <TextView
                android:id="@+id/texto_modos_juego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:padding="20dp"
                android:text="@string/comoJugar"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtit_modos_de_juego"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/tableros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_modos_juego"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="10dp">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gifbonito" />

            </LinearLayout>


            <ImageView
                android:id="@+id/subtit_navegacion"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tableros"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/titBotones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Botones"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/subtit_navegacion"
                app:layout_constraintEnd_toEndOf="@id/subtit_navegacion"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/subtit_navegacion"
                app:layout_constraintTop_toTopOf="@id/subtit_navegacion"
                app:layout_constraintVertical_bias="0.431" />

            <TextView
                android:id="@+id/texto_navegacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:padding="20dp"
                android:text="@string/botones"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtit_navegacion"
                app:layout_constraintVertical_bias="0.0" />

            <HorizontalScrollView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_navegacion">

                <LinearLayout
                    android:id="@+id/hola3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageView
                        android:id="@+id/imageBotonBack"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/back"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="45dp" />

                    <ImageView
                        android:id="@+id/imageBotonReset"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/reset"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="45dp" />

                    <ImageView
                        android:id="@+id/imageBotonOrdenar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ordenar"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="45dp" />

                    <ImageView
                        android:id="@+id/imageBotonOriginal"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/imagenoriginal"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="45dp" />

                </LinearLayout>
            </HorizontalScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>